<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sent">Sent</string>
    <string name="inbox">Inbox</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="nologin">New user?</string>
    <string name="app_name">VK</string>
    <string name="app_description">Android client for vk.com social network</string>
    <string name="legal">Legal Information</string>
    <string name="copyright">© 2009-2010 Ildar Karimov, Evgeny Balandin, Serg Podtynnyi, Anastasia Dremina and others.</string>

    <string name="ok">Ok</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="remove_status">Delete</string>
    <string name="online_only">Online only</string>
    <string name="from">From:</string>
    <string name="to">Whom:</string>

    <!-- HomeGrid -->
    <string name="my_profile">My Profile</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="updates">Updates</string>
    <string name="photos">Photos</string>
    <string name="help">Help</string>
    <string name="requests">Requests</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="what_are_you_doing">What you are doing?</string>
    
    <!-- Settings -->
    <string name="prefs_title">Settings</string>
    <string name="period_title">Background updates</string>
    <string name="sound_title">Sound</string>
    <string name="notif_title">Notifications</string>
    <string name="load_pics_title">Download pictures</string>

    <string name="refresh">Refresh</string>

    <string name="about">About</string>
    <string name="send_message">Send message</string>
    <string name="remove_from_friends">Remove from friends</string>
    <string name="view_profile">View profile</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="message_sent">Message sent!</string>
    <!--info-->
    <string name="build">, build</string>
    <string name="version">Version</string>
    <!--status messages--> 
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <!--error messages-->  
    <string name="err_msg_check_connection_to_send">Cannot send the message. Check connection.</string>
    <string name="err_msg_connection_problem">Connection problems</string>
    <string name="err_msg_fatal_error">Fatal error. Cannot connect to the service</string>
    <string name="err_msg_offer_report"> Application had crashed last time. Would you send the error report? </string>
    <string name="err_msg_check_connection">Please check your Internet connection</string>
    <string name="err_msg_wrong_pass"> Password incorrect! </string>
    <string name="err_msg_wrong_pass_long"> No such e-mail address has been registered or your password is incorrect</string>
    <string name="err_msg_captcha">Captcha required! </string>
    <string name="err_msg_captcha_long">Captcha required, please try again later or login via wifi</string>
    <string name="err_msg_internal_error">Internal error! </string>
    <string name="err_msg_report">Please report to developers</string>
    
    <!--state messages-->
    <string name="state_msg_checking_cred"> Please wait while checking your credentials... </string>  
   
    
    <!--update statuses-->
    <string name="status_update_ok">Update successful</string>
    <string name="status_update_err">Update failed</string>
    <!--login message-->
    <string name="login_err">Login/pass incorrect</string>
    <string name="view_and_reply">View message thread/reply</string>
    <string name="reply">Reply</string>
    <string name="delete_message">Delete message</string>
    <string name="please_login">Please enter your login/pass</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="remember">Remember me</string>
    <!--user info-->
    <string name="info">Info</string>
    <string name="info_sex">Sex:</string>
    <string name="info_birthday">Birthday:</string>
    <string name="info_status">Maritial status:</string>
    <string name="info_views">Political views:</string>
    <string name="info_location">Location:</string>
    <string name="info_phone">Phone:</string>
    <string name="info_name">Name:</string>
    <string name="sex_female">Female</string>
    <string name="sex_male">Male</string>
    <string name="info_city">Location:</string>
    <string name="send_by_me">Me</string>
    <!--family status-->
    <string name="fs_single_female">Single</string>
    <string name="fs_single_male">Single</string>
    <string name="fs_engaged_male">Engaged</string>
    <string name="fs_engaged_female">Engaged</string>
    <string name="fs_married_female">Married</string>
    <string name="fs_married_male">Married</string>
    <string name="fs_as">Actively searching</string>
    <string name="fs_complicated">It\'s complicated</string>
    <string name="fs_relationship">In a relationship</string>
    <!--political views-->
    <string name="pv_apathetic">Apathetic</string>
    <string name="pv_communist">Communist</string>
    <string name="pv_socialist">Socialist</string>
    <string name="pv_moderate">Moderate</string>
    <string name="pv_liberal">Liberal</string>
    <string name="pv_conservative">Conservative</string>
    <string name="pv_monarchist">Monarchist</string>
    <string name="pv_ultraconservative">Ultraconservative</string>
    <!-- Notifications -->
    <string name="notif_new_events">New events</string>
    <string name="notif_new_friend">New friend</string>
    <string name="notif_new_friends">New friends</string>
    <string name="notif_new_message">New message</string>
    <string name="notif_new_messages">New messages</string>
    <string name="notif_new_photo">New photo</string>
    <string name="notif_new_photos">New photos</string>
    <string name="notif_friends">Friends:</string>
    <string name="notif_messages">Messages:</string>
    <string name="notif_photos">Photo:</string>
    <string name="captcha_loading">loading captcha</string>
    <string name="captcha_load_failed">failed to load captcha</string>
</resources>
