<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/InfoProfile" android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:orientation="vertical"

              android:background="#ffffff">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:gravity="top"
                  android:layout_gravity="top">
        <ImageButton android:id="@+id/InfoPhoto" android:minWidth="105dip"
                     android:minHeight="150dip" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
        <LinearLayout android:layout_height="wrap_content"
                      android:orientation="vertical" android:gravity="center"
                      android:layout_width="fill_parent" android:paddingLeft="3dp">
            <LinearLayout android:layout_height="wrap_content"
                          android:layout_width="fill_parent">

                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content" android:id="@+id/InfoFirstName"
                          android:text="Firstname"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:id="@+id/InfoLastName"
                          android:text="Lastname" android:paddingLeft="10dp"/>

            </LinearLayout>
            <TextView android:id="@+id/InfoStatusText"
                      android:layout_height="wrap_content" android:layout_width="fill_parent"
                      android:text="status..."/>
        </LinearLayout>

    </LinearLayout>

    <TableLayout android:id="@+id/info_table"
                 android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:id="@+id/sex_row" android:visibility="gone">
            <TextView android:layout_column="1" android:text="@string/info_sex"
                      android:padding="3dip"/>
            <TextView android:id="@+id/user_sex" android:gravity="left"
                      android:padding="3dip" android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow android:id="@+id/birthday_row" android:visibility="gone">
            <TextView android:layout_column="1" android:text="@string/info_birthday"
                      android:padding="3dip"/>
            <TextView android:id="@+id/birthday" android:gravity="left"
                      android:padding="3dip" android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow android:id="@+id/status_row" android:visibility="gone">
            <TextView android:layout_column="1" android:text="@string/info_status"
                      android:padding="3dip"/>
            <TextView android:id="@+id/status" android:gravity="left"
                      android:padding="3dip" android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow android:id="@+id/views_row" android:visibility="gone">
            <TextView android:layout_column="1" android:text="@string/info_views"
                      android:padding="3dip"/>
            <TextView android:id="@+id/views" android:padding="3dip"
                      android:gravity="left" android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow android:id="@+id/phone_row" android:visibility="gone">
            <TextView android:layout_column="1" android:text="@string/info_phone"
                      android:padding="3dip"/>
            <TextView android:id="@+id/phone" android:gravity="left"
                      android:padding="3dip" android:textColor="@android:color/black"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
